--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "electron-quick-start",
+  "name": "elderberry",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Your homeopathic anti-virus solution",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/pelayomendez/elderberry",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "Antivirus",
+    "homeopathic"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Pelayo Méndez",
+  "license": "MIT",
   "devDependencies": {
     "electron": "~1.7.8"
   }
